--- a/css/media.css
+++ b/css/media.css
@@ -205,6 +205,9 @@
 }
 
 @media (max-width: 640px) {
+    .btn {
+        font-size: 14px;
+    }
     .promo {
         padding-top: 60px;
     }
@@ -241,9 +244,6 @@
     .promo__img span {
         font-size: 12px;
     }
-    .promo__btn {
-        margin-top: 30px;
-    }
     .promo2 {
         margin-top: 80px;
     }
@@ -278,6 +278,7 @@
     }
     .bestsellers__btn-none {
         display: flex;
+        margin-top: 40px;
     }
     .promo3 {
         margin-top: 80px;
