--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,32 @@ h1, h3 {
     margin: 0 auto;
 }
 
+.btn {
+    font-size: 16px;
+    line-height: 14px;
+    font-weight: 500;
+    padding: 10px 28px;
+    color: #122947;
+    background: none;
+    border: 1px solid #B3BAC1;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    box-shadow: 0px 3px 15px 0px rgba(93, 92, 92, 0.5);
+}
+
+.btn-promo3 {
+    width: 200px;
+    height: 40px;
+}
+
+.btn-subscription {
+    width: 170px;
+    height: 40px;
+}
+
 .header {
     position: absolute;
     width: 100%;
@@ -116,11 +142,16 @@ h1, h3 {
     justify-content: space-between;
 }
 
-.promo__img span{
+.promo__img-title{
     font-size: 16px;
     font-weight: 500;
+    color: #122947;
     margin-right: auto;
     display: inline-block;
+}
+
+.promo__img-title:hover{
+    font-weight: 600;
 }
 
 .promo__img_btn {
@@ -145,22 +176,7 @@ h1, h3 {
     width: 274px;
     text-align: center;
     margin-top: 30px;
-}
-
-.promo__btn {
-    width: 140px;
-    height: 40px;
-    font-size: 16px;
-    font-weight: 500;
-    background: none;
-    border: 1px solid #B3BAC1;
-    border-radius: 2px;
-    cursor: pointer;
-    margin-top: 40px;
-}
-
-.promo__btn:hover {
-    box-shadow: 0px 3px 15px 0px rgba(93, 92, 92, 0.5);
+    margin-bottom: 40px;
 }
 
 .bestsellers {
@@ -188,26 +204,11 @@ h1, h3 {
 .bestsellers__text {
     line-height: 26px;
     width: 215px;
+    margin-bottom: 40px;
 }
 
 .bestsellers__btn {
-    width: 155px;
-    height: 40px;
-    font-size: 16px;
-    font-weight: 500;
-    background: none;
-    border: 1px solid #B3BAC1;
-    border-radius: 2px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #122947;
-    margin-top: 40px;
-}
-
-.bestsellers__btn:hover {
-    box-shadow: 0px 3px 15px 0px rgba(93, 92, 92, 0.5);
+    width: 160px;
 }
 
 .bestproducts__list {
@@ -243,9 +244,12 @@ h1, h3 {
 .bestproducts__btn {
     font-size: 12px;
     line-height: 24px;
-
     color: #122947;
     border-bottom: solid 1px #122947;
+}
+
+.bestproducts__btn:hover {
+    font-weight: 600;
 }
 
 .bestsellers__btns {
@@ -289,26 +293,7 @@ h1, h3 {
     max-width: 284px;
     margin-top: 30px;
     line-height: 26px;
-}
-
-.promo2__btn {
-    width: 140px;
-    height: 40px;
-    font-size: 16px;
-    font-weight: 500;
-    background: none;
-    border: 1px solid #B3BAC1;
-    border-radius: 2px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #122947;
-    margin-top: 40px;
-}
-
-.promo2__btn:hover {
-    box-shadow: 0px 3px 15px 0px rgba(93, 92, 92, 0.5);
+    margin-bottom: 40px;
 }
 
 .promo3 {
@@ -338,22 +323,7 @@ h1, h3 {
     max-width: 330px;
     line-height: 26px;
     margin-top: 20px;
-}
-
-.promo3__btn {
-    width: 200px;
-    height: 40px;
-    font-size: 16px;
-    font-weight: 500;
-    background: none;
-    border: 1px solid #B3BAC1;
-    border-radius: 2px;
-    cursor: pointer;
-    margin-top: 45px;
-}
-
-.promo3__btn:hover {
-    box-shadow: 0px 3px 15px 0px rgba(93, 92, 92, 0.5);
+    margin-bottom: 45px;
 }
 
 .promo3__image {
@@ -388,26 +358,7 @@ h1, h3 {
     font-weight: 500;
     line-height: 40px;
     text-align: center;
-}
-
-.about__btn {
-    width: 140px;
-    height: 40px;
-    font-size: 16px;
-    font-weight: 500;
-    background: none;
-    border: 1px solid #B3BAC1;
-    border-radius: 2px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #122947;
-    margin-top: 40px;
-}
-
-.about__btn:hover {
-    box-shadow: 0px 3px 15px 0px rgba(93, 92, 92, 0.5);
+    margin-bottom: 50px;
 }
 
 .subscription {
@@ -437,24 +388,8 @@ h1, h3 {
     margin-bottom: 30px;
 }
 
-.subscription__btn {
-    width: 140px;
-    height: 40px;
-    font-size: 16px;
-    font-weight: 500;
-    background: none;
-    border: 1px solid #B3BAC1;
-    border-radius: 2px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #122947;
-    margin-top: 40px;
-}
-
-.subscription__btn:hover {
-    box-shadow: 0px 3px 15px 0px rgba(93, 92, 92, 0.5);
+.subscription__text{
+    margin-bottom: 40px;
 }
 
 .contacts {
